# Glypha-III

./: .gitattributes  .gitignore  Glypha.r  Glypha_A.icns  Info-Glypha__Upgraded_.plist  README.md  TODO
English.lproj/: Credits.rtf  InfoPlist.strings  Localizable.strings
Glypha.pbproj/: project.pbxproj
Glypha.xcodeproj/: project.pbxproj
Resources_from_Glypha.rsrc_/DITL/: 00130_High_Score_Name.ditl
Resources_from_Glypha.rsrc_/MENU/: 00128.menu  00129.menu
Resources_from_Glypha.rsrc_/PICT/: 00132.pict  00135.pict  00137.pict  00139.pict  00145.pict  00148.pict
Resources_from_Glypha.rsrc_/STR_/English.lproj/: 00128.strings  00160_Prefs.strings
Resources_from_Glypha.rsrc_/WIND/: 00128_mainWindow.wind  00129_aboutWindow.wind
Resources_from_Glypha.rsrc_/snd_/: 01000_Ahnk.snd  01003_Boom_1.snd  01004_Boom_2.snd  01005_Drip.snd  01006_Flap.aiff  01008_Grating.snd  01009_Lightning.snd  01011_Rez.aiff  01012_Screech.aiff  01014_Walk.snd  01015_Flap_2.aiff
Resources_from_Glypha_dot_rsrc/ALRT/: 00128_Red_Alert.alrt
Resources_from_Glypha_dot_rsrc/DITL/: 00128_Red_Alert.ditl  00133_Configure_Game.ditl  00134.ditl
Resources_from_Glypha_dot_rsrc/DLOG/: 00130_High_Score_Name.dlog  00133_Configure_Game.dlog  00134_About_The_Source_Code.dlog
Resources_from_Glypha_dot_rsrc/MENU/: 00130.menu
Resources_from_Glypha_dot_rsrc/PICT/: 00128.pict  00134.pict  00136.pict  00140.pict  00142.pict  00144.pict
Resources_from_Glypha_dot_rsrc/STR_/English.lproj/: 00129.strings
Resources_from_Glypha_dot_rsrc/dftb/: 00134.dftb
Resources_from_Glypha_dot_rsrc/snd_/: 01001_Bird.snd  01002_Bonus.snd  01007_Flip.snd  01010_Music.aiff  01013_Spawn.snd  01016_Scrape_2.aiff
Resources_from_Glypha_dot_rsrc/wctb/: 00129.wctb
Resources_from_Glypha_dot_rsrc/zade/en.lproj/: 00000_Owner_resource.zade
Source/: .gitattributes  Enemy.c  Externs.h  Graphics.c  Interface.c  Main.c  Makefile.am  Makefile.in  Play.c  Prefs.c  SetUpTakeDown.c  Sound.c  SysBeepTest.c  Utilities.c  aclocal.m4  config.h.in  configure  configure.ac  configure.scan
Source/m4/: EbgMacOSXOptions.m4  ax_gcc_archflag.m4  bakefile-lang.m4  bakefile.m4  xorg-macros.m4
en.lproj/: Credits.rtf  InfoPlist.strings  Localizable.strings
